--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* BASICS */
+
 *,
 *::after,
 *::before {
@@ -10,22 +12,26 @@ html {
 }
 body {
     position: relative;
+    min-height: 100vh;
+    width: 100%;
     font-size: 1.7rem;
-    --bg-color: hsl(282 90% 80%);
-    --text-color: hsl(282 90% 10%);
+    transition: all 400ms linear;
     background-color: var(--bg-color);
     color: var(--text-color);
+    --bg-color: hsl(282 90% 80%);
+    --text-color: hsl(282 90% 10%);
     --theme-bg: hsl(282 80% 70%);
     --theme-txt: hsl(282 80% 30%);
 }
 body.night {
+    background-color: var(--bg-color);
+    color: var(--text-color);
     --bg-color: hsl(282 90% 10%);
     --text-color: hsl(282 70% 85%);
     --theme-bg: hsl(282 80% 30%);
     --theme-txt: hsl(282 80% 70%);
-    background-color: var(--bg-color);
-    color: var(--text-color);
 }
+/* CHANGE-THEME */
 .theme-container {
     position: absolute;
     background-color: var(--theme-bg);
@@ -34,6 +40,7 @@ body.night {
     border-radius: 10px;
     top: 3rem;
     right: 4rem;
+    transition: all 400ms linear;
 }
 .change-theme {
     position: relative;
@@ -41,10 +48,12 @@ body.night {
     bottom: 0.8rem;
     left: 2rem;
     cursor: pointer;
+    transition: all 400ms linear;
 }
 .change-theme.night {
     background-color: hsl(282 80% 10%);
     color: white;
+    transition: all 400ms linear;
 }
 .change-theme i {
     position: absolute;
@@ -53,12 +62,13 @@ body.night {
     bottom: 0;
     transform: scale(1.5);
     color: var(--theme-txt);
+    transition: all 400ms linear;
 }
 .fa-moon {
-    transition: all 300ms linear;
+    transition: all 400ms linear;
 }
 .fa-sun {
-    transition: all 300ms linear;
+    transition: all 400ms linear;
 }
 .change-theme .fa-moon {
     opacity: 0;
@@ -76,7 +86,12 @@ body.night {
     left: 2rem;
     right: unset;
 }
+/* CONTAINER */
 .container {
     padding: 2rem;
     margin: 0 auto;
+}
+.content-conatiner {
+    margin-top: 5rem;
+    text-align: center;
 }
